test/Syntax1.err
3: syntax error: missing ']'?
	print [a b c
	            ^
