test/Syntax1.logo
# negative syntax test 1: [ without ]

print [a b c